wip: drop bb.edn + bin/bridge; add tts worker to foundation-voice
Bundles three unrelated pre-existing working-tree changes:
- bb.edn (Babashka config) removed
- bin/bridge script removed
- foundation-voice gains a TTS worker subprocess for async synthesis,
  plus accompanying tests

Committed together since they were lingering in the working tree.